--- a/index.html
+++ b/index.html
@@ -1,291 +1,157 @@
+
 <!DOCTYPE html>
-<head>
-<meta charset="utf-8">
-<style>
-body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  position: relative;
-  width: 960px;
-}
+<html lang="en"><head>
+    <meta charset="utf-8">
+    <title>LiveWellSD</title>
+    <!-- Bootstrap -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-.axis text {
-  font: 14px;
-  float:#333;
-}
+	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+	<link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
 
-.x.axis text {
-  font: 30px sans-serif;
-  fill: #DDD;
-}
+  	<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+  	<link rel="stylesheet" href="style.css">
+   	<link rel="stylesheet" href="bootstrap.min.css" >   
+  	<link rel="stylesheet" href="bootstrap-2.3.2.css">
 
-.axis path{
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
+  </head>
+  <body>
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="bootstrap.min.js"></script>
 
-y.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
+<div class="navbar-wrapper">
+      <div class="container">
+	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <ul class="nav">
+		  <li>
+        <a href="index.html"><img class="logo" src="LWSD_CMYK_BT_H.png" /></a>
+      </li>
+  </ul>
+    <ul class="nav navbar-nav navbar-right">
+                <li>
+            <a href="SanDiegoCO.html">County-wide health data</a>
+          </li>
+        	    <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Explore your region's health  <b class="caret"></b></a>
+    <div class="dropdown-menu multi-column">
+      <div class="container-fluid">
+        <div class="row-fluid">
+          <div class="span3">
+            <ul class="dropdown-menu">
+              <li><a href="#">Alpine</a></li>
+              <li><a href="#">Anza-Borrego Springs</a></li>
+              <li><a href="#">Carlsbad</a></li>
+              <li><a href="#">Central SD</a></li>
+              <li><a href="chulavista.html">Chula Vista</a></li>
+              <li><a href="#">Coastal</a></li>
+              <li><a href="#">Coronado</a></li>
+              <li><a href="#">Del Mar-Mira Mesa</a></li>
+              <li><a href="#">El Cajon</a></li>
+              <li><a href="#">Elliott-Navajo</a></li>
+              <li><a href="#">Escondido</a></li>
 
-x.axis line {
-  display: none;
-}
+            </ul>
+          </div>
+          <div class="span3">
+            <ul class="dropdown-menu">
+             <li><a href="#">Fallbrook</a></li>
+              <li><a href="#">Harbison-Crest/El Cajon</a></li>
+              <li><a href="#">Jamul</a></li>
+              <li><a href="#">Kearny Mesa</a></li>
+              <li><a href="#">La Mesa</a></li>
+              <li><a href="#">Laguna-Pine Valley</a></li>
+              <li><a href="#">Lakeside</a></li>
+              <li><a href="#">Lemon Grove</a></li>
+              <li><a href="#">Mid-City</a></li>
+              <li><a href="#">Miramar</a></li>
+            </ul>
+          </div>
+          <div class="span3">
+            <ul class="dropdown-menu">
+              <li><a href="#">Mountain Empire</a></li>
+              <li><a href="#">National City</a></li>
+              <li><a href="#">North SD</a></li>
+              <li><a href="#">Oceanside</a></li>
+              <li><a href="#">Palomar-Julian</a></li>
+              <li><a href="#">Pauma</a></li>
+              <li><a href="#">Pendleton</a></li>
+              <li><a href="#">Peninsula</a></li>
+              <li><a href="#">Poway</a></li>
+              <li><a href="#">Ramona</a></li>
+          </ul>
+          </div>
+          <div class="span3">
+            <ul class="dropdown-menu">
+              <li><a href="#">San Dieguito</a></li>
+              <li><a href="#">San Marcos</a></li>
+              <li><a href="#">Santee</a></li>
+              <li><a href="#">South Bay</a></li>
+              <li><a href="#">Southeast SD</a></li>
+              <li><a href="#">Spring Valley</a></li>
+              <li><a href="#">Sweetwater</a></li>
+              <li><a href="#">University</a></li>
+              <li><a href="#">Valley Center</a></li>
+              <li><a href="#">Vista</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </li>
+  <li>
+          	<a href="#map">Map comparisons</a>
+        	</li>
+   
+ </ul>
+</ul>
+	</div>
+      </div>  </div>
 
-.bar {
-  fill: steelblue;
-  fill-opacity: .9;
-}
+<div class="text-center">
+  <div class="container">
+  <h1>Using data for better health in San Diego</h1>
+  <p class="bkgdlead">3 - 4 - 50</p>
+  
+  <div class="col-lg-4">
+    <h2>3 behaviors</h2>
+    <img src="LWSDhomepageicons_behavioricon.png" />
+    <p>Poor diet - Physical inactivity - Smoking</p>
+  </div>
+  <div class="col-lg-4">
+    <h2>4 chronic diseases</h2>
+    <img src="LWSDhomepageicons_diseaseicons.png" />
+    <p>Cancer - Heart disease/stroke - Asthma/COPD - Diabetes</p>
+  </div>
+  <div class="col-lg-4">
+    <h2>50% of deaths</h2>
+    <img src="LWSDhomepageicons_deathicon.png" />
+    <p>Worldwide</p>
+  </div>
+</div>
+</div>
 
-.bar:hover {
-  fill: brown;
-}
-
-label {
-  position: absolute;
-  top: 0px;
-  left: 10px;
-}
-</style>
-</head>
-
-<body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script>
-
-var margin = {top: 20, right: 20, bottom: 30, left: 40},
-    width = 3500 - margin.left - margin.right,
-    height = 600 - margin.top - margin.bottom;
-
-
-
-var x = d3.scale.ordinal()
-    .rangeRoundBands([0, width], .1, 1);
-
-var y = d3.scale.linear()
-    .range([height, 0]);
-
-var xAxis = d3.svg.axis()
-    .scale(x)
-    .orient("bottom");
-
-var yAxis = d3.svg.axis()
-    .scale(y)
-    .orient("left")
-
-
-var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-d3.csv("deathdata.csv", function(error, data) {
-
-  data.forEach(function(d) {
-    d.deathrate = +d.deathrate;
-  });
-
-  x.domain(data.map(function(d) { return d.SRA; }));
-  y.domain([0, d3.max(data, function(d) { return d.deathrate; })]);
-
-  svg.selectAll(".bar")
-      .data(data)
-    .enter().append("rect")
-      .attr("class", "bar")
-      .attr("x", function(d) { return x(d.SRA); })
-      .attr("width", x.rangeBand())
-      .attr("y", function(d) { return y(d.deathrate); })
-      .attr("height", function(d) { return height - y(d.deathrate); });
-	  
-  svg.append("g")
-      .attr("class", "x axis")
-      .attr("transform", "translate(0," + height + ")")
-      .call(xAxis)
-	  .selectAll("text")
-	  	.style("text-anchor", "start")
-	  	.style("font", "24px")
-        .attr("transform", function(d) {
-        	return "rotate(-90)"})
-		.attr("dx", "5px");
-
-  svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis)
-    .append("text")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("deathrate");
+<div class="lead intro well">
+<p>Chronic diseases are now the major cause of death and disability worldwide, having surpassed infectious diseases and injuries. Three behaviors contribute to four chronic diseases that cause over 50% of all deaths worldwide, a concept known as 3-4-50.</p>
+<p>In 2007 within San Diego County, the 3-4-50 diseases caused 57% of deaths and cost $4 billion in direct treatment.</p>
+<p>This website contains data made possible by the <a href="http://www.chcf.org/about">California Healthcare Foundation</a>,  <a href="http://www.chcf.org/projects/2012/free-the-data">CHCF's Free the Data Initiative</a>, <a href="http://www.sdcounty.ca.gov/hhsa/">San Diego County Health and Human Services Agency</a>, and <a href="http://www.livewellsd.org/">Live Well San Diego</a>. Visitors are welcome to explore the health of San Diego and all the regions within it.
+</div>
 
 
-  d3.select("input").on("change", change);
 
-  var sortTimeout = setTimeout(function() {
-    d3.select("input").property("checked", true).each(change);
-  }, 2000);
 
-  function change() {
-    clearTimeout(sortTimeout);
+ 
+<h2 id="map" class="text-center">Explore health data in San Diego</h2>
+<!--insert swipe map here-->
 
-    // Copy-on-write since tweens are evaluated after a delay.
-    var x0 = x.domain(data.sort(this.checked
-        ? function(a, b) { return b.deathrate - a.deathrate; }
-        : function(a, b) { return d3.ascending(a.SRA, b.SRA); })
-        .map(function(d) { return d.SRA; }))
-        .copy();
+<div class="text-center btn-cta">
+<a class="btn-lg btn-warning" href="SanDiegoCO.html" role="button">How does your region stack up?</a>
+</div>
 
-    var transition = svg.transition().duration(750),
-        delay = function(d, i) { return i * 50; };
 
-    transition.selectAll(".bar")
-        .delay(delay)
-        .attr("x", function(d) { return x0(d.SRA); });
 
-    transition.select(".x.axis")
-        .call(xAxis)
-		.selectAll("text")
-	  		.style("text-anchor", "start")
-      .selectAll("g")
-        .delay(delay);
-  }
-});
+  
 
-</script>
-<label><input type="checkbox"> Sort values</label>
-
-<script>
-
-var dispatch = d3.dispatch("load", "statechange");
-
-var groups = [
-  "deathrate",
-  "heartdisease",
-  "stroke",
-  "asthma",
-  "pulminarydisease",
-  "diabetes",
-  "cancer"
-];
-
-d3.csv("deathdata.csv", type, function(error, states) {
-  if (error) throw error;
-  var stateById = d3.map();
-  states.forEach(function(d) { stateById.set(d.SRA, d); });
-  dispatch.load(stateById);
-  dispatch.statechange(stateById.get("Alpine"));
-});
-
-// A drop-down menu for selecting a state; uses the "menu" namespace.
-dispatch.on("load.menu", function(stateById) {
-  var select = d3.select("body")
-    .append("div")
-    .append("select")
-      .on("change", function() { dispatch.statechange(stateById.get(this.value)); });
-
-  select.selectAll("option")
-      .data(stateById.values())
-    .enter().append("option")
-      .attr("value", function(d) { return d.SRA; })
-      .text(function(d) { return d.SRA; });
-
-  dispatch.on("statechange.menu", function(state) {
-    select.property("value", state.SRA);
-  });
-});
-
-// A bar chart to show total population; uses the "bar" namespace.
-dispatch.on("load.bar", function(stateById) {
-  var margin = {top: 20, right: 20, bottom: 30, left: 40},
-      width = 80 - margin.left - margin.right,
-      height = 460 - margin.top - margin.bottom;
-
-  var y = d3.scale.linear()
-      .domain([0, d3.max(stateById.values(), function(d) { return d.total; })])
-      .rangeRound([height, 0])
-      .nice();
-
-  var yAxis = d3.svg.axis()
-      .scale(y)
-      .orient("left")
-      .tickFormat(d3.format(".2s"));
-
-  var svg = d3.select("body").append("svg")
-      .attr("width", width + margin.left + margin.right)
-      .attr("height", height + margin.top + margin.bottom)
-    .append("g")
-      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-  svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis);
-
-  var rect = svg.append("rect")
-      .attr("x", 4)
-      .attr("width", width - 4)
-      .attr("y", height)
-      .attr("height", 0)
-      .style("fill", "#aaa");
-
-  dispatch.on("statechange.bar", function(d) {
-    rect.transition()
-        .attr("y", y(d.total))
-        .attr("height", y(0) - y(d.total));
-  });
-});
-
-// A pie chart to show population by age group; uses the "pie" namespace.
-dispatch.on("load.pie", function(stateById) {
-  var width = 880,
-      height = 460,
-      radius = Math.min(width, height) / 2;
-
-  var color = d3.scale.ordinal()
-      .domain(groups)
-      .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
-
-  var arc = d3.svg.arc()
-      .outerRadius(radius - 10)
-      .innerRadius(radius - 70);
-
-  var pie = d3.layout.pie()
-      .sort(null);
-
-  var svg = d3.select("body").append("svg")
-      .attr("width", width)
-      .attr("height", height)
-    .append("g")
-      .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
-
-  var path = svg.selectAll("path")
-      .data(groups)
-    .enter().append("path")
-      .style("fill", color)
-      .each(function() { this._current = {startAngle: 0, endAngle: 0}; });
-
-  dispatch.on("statechange.pie", function(d) {
-    path.data(pie.value(function(g) { return d[g]; })(groups)).transition()
-        .attrTween("d", function(d) {
-          var interpolate = d3.interpolate(this._current, d);
-          this._current = interpolate(0);
-          return function(t) {
-            return arc(interpolate(t));
-          };
-        });
-  });
-});
-
-// Coerce population counts to numbers and compute total per state.
-function type(d) {
-  d.total = d3.sum(groups, function(k) { return d[k] = +d[k]; });
-  return d;
-}
-
-</script>
-
-</body>
-</html>
-
+</body></html>
